2007-10-17  Marcus Brinkmann  <marcus@g10code.de>

	* client.cc (default_uiserver_name): Fix check for dirty hack.

2007-10-16  Marcus Brinkmann  <marcus@g10code.de>

	* client.cc (default_uiserver_name): Fall back to HKLM for UI Server.

	* client.cc (default_uiserver_name): Get UI Server from HKCU.

2007-10-15  Marcus Brinkmann  <marcus@g10code.de>

	(client_t::call_assuan): Call uiserver_connect.
	* registry.c: Include assert.h.  Check return value of malloc.
	* exechelp.h, exechelp.c: New files.
	* Makefile.am (gpgex_SOURCES): Add exechelp.h and exechelp.c.
	* main.h (REGKEY): Move to ...
	* registry.h (REGKEY): ... here.
	* main.cc (_gpgme_debug): Put into extern C.
	* main.h: Move debug stuff into ...
	* debug.h: ... this new file.
	* client.cc (default_uiserver_name, uiserver_connect): New functions.

2007-10-05  Marcus Brinkmann  <marcus@g10code.de>

	* main.cc (DllMain): Call WSACleanup.

	* main.cc (DllMain): Initialize winsock.

	* client.cc (percent_escape): Also escape ':' again.
	* gpgex.cc (start_help): Do not sleep.

	* client.h (class client_t): Two new member functions
	create_checksums and verify_checksums.
	* client.cc (client_t::create_checksums, client_t::verify_checksums): New functions.
	(client_t::encrypt_sign, client_t::encrypt): Fix spelling.
	* gpgex.cc (ID_CMD_CREATE_CHECKSUMS, ID_CMD_VERIFY_CHECKSUMS,
	ID_CMD_STR_CREATE_CHECKSUMS, ID_CMD_STR_VERIFY_CHECKSUMS): New macros.
	(gpgex_t::QueryContextMenu): Add create and verify checksums menu entries.
	(gpgex_t::GetCommandString): Support these here as well.  Translate all strings.

2007-10-03  Marcus Brinkmann  <marcus@g10code.de>

	* client.cc (percent_escape, escape): New functions.
	(client_t::call_assuan): Fix INPUT command.

2007-09-21  Werner Koch  <wk@g10code.com>

	* registry.c (default_homedir): Make registry works.  Reported by
	Marc Mutz.

2007-09-16  Marcus Brinkmann  <marcus@g10code.de>

	* gpgex.cc (gpgex_t::QueryContextMenu): Implement popup menu