@@ -38,99 +38,11 @@
 #define DEBUG_W32_SPAWN 0
 
 
-/* Replacement function.  */
-
-#define stpcpy my_sptcpy
-
-static char *
-stpcpy (char *d, const char *s)
-{
-  do
-    *d++ = *s;
-  while (*s++ != '\0');
-
-  return d - 1;
-}
-
-
-/* Helper function to build_w32_commandline. */
-static char *
-build_w32_commandline_copy (char *buffer, const char *string)
-{
-  char *p = buffer;
-  const char *s;
-
-  if (!*string) /* Empty string. */
-    p = stpcpy (p, "\"\"");
-  else if (strpbrk (string, " \t\n\v\f\""))
-    {
-      /* Need to do some kind of quoting.  */
-      p = stpcpy (p, "\"");
-      for (s=string; *s; s++)
-        {
-          *p++ = *s;
-          if (*s == '\"')
-            *p++ = *s;
-        }
-      *p++ = '\"';
-      *p = 0;
-    }
-  else
-    p = stpcpy (p, string);
-
-  return p;
-}
-
-/* Build a command line for use with W32's CreateProcess.  On success
-   CMDLINE gets the address of a newly allocated string.  */
-static gpg_error_t
-build_w32_commandline (const char *pgmname, const char * const *argv, 
-                       char **cmdline)
-{
-  int i, n;
-  const char *s;
-  char *buf, *p;
-
-  *cmdline = NULL;
-  n = 0;
-  s = pgmname;
-  n += strlen (s) + 1 + 2;  /* (1 space, 2 quotes) */
-  for (; *s; s++)
-    if (*s == '\"')
-      n++;  /* Need to double inner quotes.  */
-  for (i=0; (s=argv[i]); i++)
-    {
-      n += strlen (s) + 1 + 2;  /* (1 space, 2 quoting) */
-      for (; *s; s++)
-        if (*s == '\"')
-          n++;  /* Need to double inner quotes.  */
-    }
-  n++;
-
-  buf = p = malloc (n);
-  if (!buf)
-    return gpg_error_from_syserror ();
-
-  p = build_w32_commandline_copy (p, pgmname);
-  for (i = 0; argv[i]; i++) 
-    {
-      *p++ = ' ';
-      p = build_w32_commandline_copy (p, argv[i]);
-    }
-
-  *cmdline = buf;
-  return 0;
-}
-
-
-/* Fork and exec the PGMNAME with /dev/null as stdin, stdout and
-   stderr.  The arguments for the process are expected in the NULL
-   terminated array ARGV.  The program name itself should not be
-   included there.  Returns 0 on success or an error code.  */
+/* Fork and exec the program with /dev/null as stdin, stdout and
+   stderr.  Returns 0 on success or an error code.  */
 gpg_error_t
-gpgex_spawn_detached (const char *pgmname, const char *const argv[])
+gpgex_spawn_detached (const char *cmdline)
 {
-  gpg_error_t err;
   SECURITY_ATTRIBUTES sec_attr;
   PROCESS_INFORMATION pi = 
     {
@@ -141,22 +53,9 @@ gpgex_spawn_detached (const char *pgmname, const char *const argv[])
     };
   STARTUPINFO si;
   int cr_flags;
-  char *cmdline;
-  int i;
 
-  TRACE_BEG1 (DEBUG_ASSUAN, "gpgex_spawn_detached", pgmname,
-	      "pgmname=%s", pgmname);
-  i = 0;
-  while (argv[i])
-    {
-      TRACE_LOG2 ("argv[%2i] = %s", i, argv[i]);
-      i++;
-    }
-
-  /* Build the command line.  */
-  err = build_w32_commandline (pgmname, argv, &cmdline);
-  if (err)
-    return err; 
+  TRACE_BEG1 (DEBUG_ASSUAN, "gpgex_spawn_detached", cmdline,
+	      "cmdline=%s", cmdline);
 
   /* Prepare security attributes.  */
   memset (&sec_attr, 0, sizeof sec_attr);
@@ -173,12 +72,10 @@ gpgex_spawn_detached (const char *pgmname, const char *const argv[])
   cr_flags = (CREATE_DEFAULT_ERROR_MODE
               | GetPriorityClass (GetCurrentProcess ())
 	      | CREATE_NEW_PROCESS_GROUP
-              | DETACHED_PROCESS); 
+              | DETACHED_PROCESS);
 
-  (void) TRACE_LOG2 ("CreateProcess, path=`%s' cmdline=`%s'\n",
-		     pgmname, cmdline);
-  if (!CreateProcess (pgmname,     /* pgmname; Program to start.  */
-                      cmdline,       /* Command line arguments.  */
+  if (!CreateProcess (NULL,          /* pgmname; Program to start.  */
+                      (char *) cmdline, /* Command line arguments.  */
                       &sec_attr,     /* Process security attributes.  */
                       &sec_attr,     /* Thread security attributes.  */
                       TRUE,          /* Inherit handles.  */
@@ -190,10 +87,8 @@ gpgex_spawn_detached (const char *pgmname, const char *const argv[])
                       ))
     {
       (void) TRACE_LOG1 ("CreateProcess failed: %i\n", GetLastError ());
-      free (cmdline);
       return gpg_error (GPG_ERR_GENERAL);
     }
-  free (cmdline);
   
   /* Process has been created suspended; resume it now. */
   CloseHandle (pi.hThread); 
